// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon renders inverse trigger icon 1`] = `
<span
  className="ds-c-tooltip-icon__container"
>
  <InformationIcon
    className="ds-c-tooltip-icon ds-c-tooltip-icon--inverse"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`TooltipIcon renders normal trigger icon 1`] = `
<span
  className="ds-c-tooltip-icon__container"
>
  <InformationIcon
    className="ds-c-tooltip-icon"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;
